--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,12 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.example</groupId>
-	<artifactId>SpringFrontend</artifactId>
+	<artifactId>SpringFrontEnd</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>SpringFrontend</name>
-	<description>SpringFrontend</description>
+	<name>SpringFrontEnd</name>
+	<description>SpringFrontEnd</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
 		<hilla.version>2.5.5</hilla.version>
 	</properties>
 	<dependencies>
@@ -30,7 +30,8 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<optional>true</optional>
+			<version>1.18.30</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -58,6 +59,22 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<source>21</source>
+					<target>21</target>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>1.18.30</version>
+						</path>
+					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
+			<plugin>
 				<groupId>dev.hilla</groupId>
 				<artifactId>hilla-maven-plugin</artifactId>
 				<version>${hilla.version}</version>
@@ -73,14 +90,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -90,6 +99,22 @@
 			<id>production</id>
 			<build>
 				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-compiler-plugin</artifactId>
+						<version>3.8.1</version>
+						<configuration>
+							<source>21</source>
+							<target>21</target>
+							<annotationProcessorPaths>
+								<path>
+									<groupId>org.projectlombok</groupId>
+									<artifactId>lombok</artifactId>
+									<version>1.18.30</version>
+								</path>
+							</annotationProcessorPaths>
+						</configuration>
+					</plugin>
 					<plugin>
 						<groupId>dev.hilla</groupId>
 						<artifactId>hilla-maven-plugin</artifactId>
