--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-draggable": "^4.4.6",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
     "react-html-parser": "^2.0.2",
     "react-input-mask": "3.0.0-alpha.2",
