--- a/package.json
+++ b/package.json
@@ -125,6 +125,7 @@
     "@types/node": "^22.3.0",
     "@types/react": "18.3.11",
     "@types/react-dom": "18.3.0",
+    "@types/react-helmet": "^6.1.11",
     "@types/react-html-parser": "^2.0.6",
     "@types/react-input-mask": "^3.0.5",
     "@types/turndown": "^5.0.5",
