--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
 {
   "_version": "9.1",
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "jsx": "react-jsx",
     "inlineSources": true,
