--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,3 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Java CI with Maven
 
 on:
@@ -28,12 +20,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Clone SpringModels repository
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}  # Use the secret for the GitHub token
+      run: |
+        git clone https://$GH_TOKEN@github.com/nahushr18/SpringModels.git
+        cd SpringModels
+        git checkout development
+
+    - name: Build SpringModels with Maven
+      run: |
+        cd SpringModels
+        mvn clean install
+
+    - name: Build main project with Maven
+      run: mvn -B package --file pom.xml
+
+    - name: Copy JAR to SpringFrontEnd/libs
+      run: |
+        mkdir -p SpringFrontEnd/libs
+        cp SpringModels/target/SpringModels-1.0-SNAPSHOT.jar SpringFrontEnd/libs/SpringModels-1.0-SNAPSHOT.jar
     - uses: actions/checkout@v4
+
     - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'temurin'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
